* 修改依赖包

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "limingxinleo/limx-func": "~2.0.2"
+        "limingxinleo/limx-func": "~2.0"
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
